--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "timer-block",
 	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"description": "Add a client side timer within WordPress pages.",
+	"author": "Pierre Duverneix - Fondation UNIT",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
